force-app/main/default/objects/pse__Proj__c/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>pse__Account__r.BillingCity</formula>
    <label>Account City</label>
    <type>Text</type>
</CustomField>