force-app/main/default/objects/pse__Proj__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT(pse__Account__r.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>