force-app/main/default/objects/pse__Proj__c/fields/Actual_Hours_NB__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_NB__c</fullName>
    <label>Actual Hours (NB)</label>
    <summarizedField>Budget_Tracking__c.Actual_Hours_NB__c</summarizedField>
    <summaryForeignKey>Budget_Tracking__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>