force-app/main/default/objects/pse__Proj__c/fields/Advanced_Tracking_Project__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Tracking_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Tracking Project</label>
    <type>Checkbox</type>
</CustomField>