force-app/main/default/objects/pse__Proj__c/fields/After_Market_Partner_Project__c.field-meta.xml
<CustomField>
    <fullName>After_Market_Partner_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked for projects where partners obtain work directly through a client (not though an Intapp opportunity), and we need to track the project.</description>
    <label>After Market Partner Project</label>
    <type>Checkbox</type>
</CustomField>