force-app/main/default/objects/pse__Proj__c/fields/Age_Once_Advanced_from_Handover__c.field-meta.xml
<CustomField>
    <fullName>Age_Once_Advanced_from_Handover__c</fullName>
    <label>Age Once Advanced from Handover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>