force-app/main/default/objects/pse__Proj__c/fields/All_project_register_items_are_closed__c.field-meta.xml
<CustomField>
    <fullName>All_project_register_items_are_closed__c</fullName>
    <description>All items on the project register (the smartsheet) are marked closed (yes, no)</description>
    <inlineHelpText>All items on the project register (the smartsheet) are marked closed (yes, no)</inlineHelpText>
    <label>All project register items are closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>