force-app/main/default/objects/pse__Proj__c/fields/Approved_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Milestone_Amount__c</fullName>
    <label>Approved Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>