force-app/main/default/objects/pse__Proj__c/fields/Assigned_Hours_Delta__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours_Delta__c</fullName>
    <formula>Assigned_Hours__c - pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Hours Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>