force-app/main/default/objects/pse__Proj__c/fields/Audit_Actual_Hours_Correct__c.field-meta.xml
<CustomField>
    <fullName>Audit_Actual_Hours_Correct__c</fullName>
    <formula>Actual_Hours_Total__c = Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit: Actual Hours Correct?</label>
    <type>Checkbox</type>
</CustomField>