force-app/main/default/objects/pse__Proj__c/fields/Bloat__c.field-meta.xml
<CustomField>
    <fullName>Bloat__c</fullName>
    <formula>MAX(Assigned_Hours__c, Total_Hours__c) - pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bloat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>