force-app/main/default/objects/pse__Proj__c/fields/Bloat_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bloat_Percent__c</fullName>
    <formula>IF(
  MAX(Assigned_Hours__c, Total_Hours__c)&gt;0, 
  (MAX(Assigned_Hours__c, Total_Hours__c) - pse__Planned_Hours__c)/MAX(Assigned_Hours__c, Total_Hours__c),
  IF(
    MAX(Assigned_Hours__c, Total_Hours__c)=0, 
    0,
    NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bloat %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>