force-app/main/default/objects/pse__Proj__c/fields/Board_Target_Reason__c.field-meta.xml
<CustomField>
    <fullName>Board_Target_Reason__c</fullName>
    <label>Board Target Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Partner</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>