force-app/main/default/objects/pse__Proj__c/fields/Budget_Hours_Match__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hours_Match__c</fullName>
    <formula>Total_Budget_Hours__c=pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Hours Match?</label>
    <type>Checkbox</type>
</CustomField>