force-app/main/default/objects/pse__Proj__c/fields/Candidate_for_Go_Live_Celebration__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Go_Live_Celebration__c</fullName>
    <description>Used to determine if this project is a candidate for a go-live celebration upon completion of the project.</description>
    <label>Candidate for Go-Live Celebration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>