force-app/main/default/objects/pse__Proj__c/fields/Celebration_Date__c.field-meta.xml
<CustomField>
    <fullName>Celebration_Date__c</fullName>
    <description>The projected date the go-live celebration will occur.</description>
    <label>Celebration Date</label>
    <type>Date</type>
</CustomField>