force-app/main/default/objects/pse__Proj__c/fields/Clarizen_Overall_Summary__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Overall_Summary__c</fullName>
    <label>Clarizen Overall Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>