force-app/main/default/objects/pse__Proj__c/fields/Clarizen_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Project_Type__c</fullName>
    <label>Clarizen Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Customer Implementation</fullName>
                <default>true</default>
                <label>Customer Implementation</label>
            </value>
            <value>
                <fullName>Internal Project</fullName>
            </value>
            <value>
                <fullName>Executive Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>