force-app/main/default/objects/pse__Proj__c/fields/Client_Business_IT_Owner__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_IT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Business Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Client Business/IT Owner)</relationshipLabel>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>