force-app/main/default/objects/pse__Proj__c/fields/Client_Transition_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Transition_Call_Date__c</fullName>
    <label>Client Transition Call Date</label>
    <type>Date</type>
</CustomField>