force-app/main/default/objects/pse__Proj__c/fields/Client_Transition_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Client_Transition_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Transition Scheduled</label>
    <type>Checkbox</type>
</CustomField>