force-app/main/default/objects/pse__Proj__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <description>Do you have any other closing comments you want to make sure the CR team is aware of? (these will be included in email notification)</description>
    <inlineHelpText>Do you have any other closing comments you want to make sure the CR team is aware of? (these will be included in email notification)</inlineHelpText>
    <label>Closing Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>