force-app/main/default/objects/pse__Proj__c/fields/Closing_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Survey_Notes__c</fullName>
    <label>Closing Survey Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>