force-app/main/default/objects/pse__Proj__c/fields/Confidence_in_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Confidence_in_Completion_Date__c</fullName>
    <label>Confidence in Completion Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Will close; no risk</fullName>
                <default>true</default>
                <label>Will close; no risk</label>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Change in Scope</fullName>
            </value>
            <value>
                <fullName>Client Hold / Delays</fullName>
            </value>
            <value>
                <fullName>Defects</fullName>
            </value>
            <value>
                <fullName>PS Technical</fullName>
            </value>
            <value>
                <fullName>Client Technical</fullName>
            </value>
            <value>
                <fullName>SRT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>