force-app/main/default/objects/pse__Proj__c/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <formula>Total_Hours__c/Assigned_Hours__c</formula>
    <label>% Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>