force-app/main/default/objects/pse__Proj__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <label>Contract Amount</label>
    <summarizedField>Budget_Tracking__c.Contract_Amount__c</summarizedField>
    <summaryForeignKey>Budget_Tracking__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>