force-app/main/default/objects/pse__Proj__c/fields/Contract_Amount_Correct__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount_Correct__c</fullName>
    <formula>ROUND(Contract_Amount__c,2) = ROUND(Services_Amount_T_M__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Amount Correct?</label>
    <type>Checkbox</type>
</CustomField>