force-app/main/default/objects/pse__Proj__c/fields/Contract_Credits__c.field-meta.xml
<CustomField>
    <fullName>Contract_Credits__c</fullName>
    <description>This field is to be populated with credits listed on a services contract.</description>
    <label>Contract Credits Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>