force-app/main/default/objects/pse__Proj__c/fields/Contract_Hours_NB__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hours_NB__c</fullName>
    <label>Contract Hours  (NB)</label>
    <summarizedField>Budget_Tracking__c.Contract_Hours_NB__c</summarizedField>
    <summaryForeignKey>Budget_Tracking__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>