force-app/main/default/objects/pse__Proj__c/fields/CRD_Email__c.field-meta.xml
<CustomField>
    <fullName>CRD_Email__c</fullName>
    <label>CSD/M Email</label>
    <type>Email</type>
</CustomField>