force-app/main/default/objects/pse__Proj__c/fields/Creation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Creation_Approval_Status__c</fullName>
    <label>Creation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Ops Submission</fullName>
                <default>true</default>
                <label>Pending Ops Submission</label>
            </value>
            <value>
                <fullName>Submitted for Ops Approval</fullName>
            </value>
            <value>
                <fullName>Ops Approved</fullName>
            </value>
            <value>
                <fullName>Ops Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>