force-app/main/default/objects/pse__Proj__c/fields/Customer_agreed_deliverables_are_met__c.field-meta.xml
<CustomField>
    <fullName>Customer_agreed_deliverables_are_met__c</fullName>
    <description>Customer agrees all project deliverables are met (yes, no, partial)</description>
    <inlineHelpText>Customer agrees all project deliverables are met (yes, no, partial)</inlineHelpText>
    <label>Customer agreed deliverables are met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>