force-app/main/default/objects/pse__Proj__c/fields/Customer_agrees_project_items_completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_agrees_project_items_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do both Intapp and Customer agree that all project plan items are completed?</description>
    <inlineHelpText>Do both Intapp and Customer agree that all project plan items are completed?</inlineHelpText>
    <label>Customer agrees project items completed</label>
    <type>Checkbox</type>
</CustomField>