force-app/main/default/objects/pse__Proj__c/fields/Customer_confirms_production_migration__c.field-meta.xml
<CustomField>
    <fullName>Customer_confirms_production_migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has customer indicated in writing that solution has been migrated to production and is ready for roll-out to end users?</description>
    <inlineHelpText>Has customer indicated in writing that solution has been migrated to production and is ready for roll-out to end users?</inlineHelpText>
    <label>Customer confirms production migration</label>
    <type>Checkbox</type>
</CustomField>