force-app/main/default/objects/pse__Proj__c/fields/Customer_Infrastructure_to_Intapp_Spec__c.field-meta.xml
<CustomField>
    <fullName>Customer_Infrastructure_to_Intapp_Spec__c</fullName>
    <description>Customer Infrastructure to Intapp Specification (yes, no, n/a)</description>
    <inlineHelpText>Customer Infrastructure to Intapp Specification (yes, no, n/a)</inlineHelpText>
    <label>Customer Infrastructure to Intapp Spec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>