force-app/main/default/objects/pse__Proj__c/fields/Date_Project_Creation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Project_Creation_Approved__c</fullName>
    <label>Date Project Creation Approved</label>
    <type>Date</type>
</CustomField>