force-app/main/default/objects/pse__Proj__c/fields/Elapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(pse__Stage__c,&quot;Closed - Completed&quot;),
    ISPICKVAL(pse__Stage__c,&quot;Closed - Canceled&quot;),
    ISPICKVAL(pse__Stage__c,&quot;Closed - Abandoned&quot;)
  ),
  (pse__End_Date__c-pse__Start_Date__c),
  (TODAY()-pse__Start_Date__c)
)</formula>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>