force-app/main/default/objects/pse__Proj__c/fields/Firm_Participant__c.field-meta.xml
<CustomField>
    <fullName>Firm_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM Firm Participant 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Board Participant</relationshipLabel>
    <relationshipName>Project_Board_Participant3</relationshipName>
    <type>Lookup</type>
</CustomField>