force-app/main/default/objects/pse__Proj__c/fields/Flag_for_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag for Follow Up</label>
    <type>Checkbox</type>
</CustomField>