force-app/main/default/objects/pse__Proj__c/fields/Hours_Delta__c.field-meta.xml
<CustomField>
    <fullName>Hours_Delta__c</fullName>
    <formula>Total_Hours__c - pse__Planned_Hours__c</formula>
    <label>Actual Hours Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>