force-app/main/default/objects/pse__Proj__c/fields/Hours_Delta_Percent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Delta_Percent__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(pse__Planned_Hours__c)),
    NOT(pse__Planned_Hours__c = 0)
  ),
  (Total_Hours__c - pse__Planned_Hours__c)/pse__Planned_Hours__c,
  NULL
)</formula>
    <label>Actual Hours Delta (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>