force-app/main/default/objects/pse__Proj__c/fields/Implementation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Partner__c</fullName>
    <formula>pse__Opportunity__r.Services_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Partner</label>
    <type>Text</type>
</CustomField>