force-app/main/default/objects/pse__Proj__c/fields/Implied_Actual_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Implied_Actual_Hourly_Rate__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Total_Hours__c)),
    NOT(Total_Hours__c=0)
  ),
  pse__Billings__c / Total_Hours__c,
  0
)</formula>
    <label>Implied Actual Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>