force-app/main/default/objects/pse__Proj__c/fields/Implied_Sold_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Implied_Sold_Hourly_Rate__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(pse__Planned_Hours__c)),
    NOT(pse__Planned_Hours__c=0)
  ),
  pse__Bookings__c / pse__Planned_Hours__c,
  0
)</formula>
    <label>Implied Sold Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>