force-app/main/default/objects/pse__Proj__c/fields/Initial_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Go_Live_Date__c</fullName>
    <label>Initial Go-Live Date</label>
    <type>Date</type>
</CustomField>