force-app/main/default/objects/pse__Proj__c/fields/Intapp_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Account_Number__c</fullName>
    <formula>pse__Account__r.IntApp_Account_Number__c</formula>
    <label>Intapp Account Number</label>
    <type>Text</type>
</CustomField>