force-app/main/default/objects/pse__Proj__c/fields/Intapp_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Opportunity_Number__c</fullName>
    <formula>pse__Opportunity__r.IntApp_Opportunity_Number__c</formula>
    <label>Intapp Opportunity Number</label>
    <type>Text</type>
</CustomField>