force-app/main/default/objects/pse__Proj__c/fields/Intapp_Participant_2__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Participant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM Intapp Participant 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>