force-app/main/default/objects/pse__Proj__c/fields/Intapp_Participant__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM Intapp Participant 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Board_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>