force-app/main/default/objects/pse__Proj__c/fields/Intapp_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Project_Type__c</fullName>
    <description>Identifies the type of Professional Services project.</description>
    <inlineHelpText>&quot;New Install&quot; criteria: 
- virgin customer 
- first installation of a product 
- installation of AT for a WB customer. 
- installation of WB for an AT customer. 
- phase 1 of cases matching above criteria; subsequent phases do not count.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>New Product Install</fullName>
            </value>
            <value>
                <fullName>Solution Extension / Module</fullName>
            </value>
            <value>
                <fullName>Upgrade - without Solution Extension</fullName>
            </value>
            <value>
                <fullName>Upgrade - with Solution Extension</fullName>
            </value>
            <value>
                <fullName>New Product Introduction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Intapp Prime</fullName>
            </value>
            <value>
                <fullName>TFG - EOL Conversion</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Internal Project</fullName>
            </value>
            <value>
                <fullName>Work At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>