force-app/main/default/objects/pse__Proj__c/fields/Internal_Smartsheet__c.field-meta.xml
<CustomField>
    <fullName>Internal_Smartsheet__c</fullName>
    <description>PSA - URL for internal Smartsheet for Intapp (Smartsheet workspace that is not visible to customer)</description>
    <inlineHelpText>URL for internal Smartsheet for Intapp (Smartsheet workspace that is not visible to customer)</inlineHelpText>
    <label>Internal Smartsheet</label>
    <type>Url</type>
</CustomField>