force-app/main/default/objects/pse__Proj__c/fields/Is_PM_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_Active__c</fullName>
    <formula>pse__Project_Manager__r.pse__Is_Resource_Active__c</formula>
    <label>Is PM Active?</label>
    <type>Checkbox</type>
</CustomField>