force-app/main/default/objects/pse__Proj__c/fields/Is_PM_External__c.field-meta.xml
<CustomField>
    <fullName>Is_PM_External__c</fullName>
    <formula>pse__Project_Manager__r.pse__External_Resource__c</formula>
    <label>Is PM External?</label>
    <type>Checkbox</type>
</CustomField>