force-app/main/default/objects/pse__Proj__c/fields/Last_Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Ending_Date__c</fullName>
    <description>Most recent week-ending date</description>
    <formula>CASE( 
MOD(TODAY() - DATE(1900, 1, 6),7), 
0, TODAY(), 
1, TODAY() - 1, 
2, TODAY() - 2, 
3, TODAY() - 3, 
4, TODAY() - 4, 
5, TODAY() - 5, 
6, TODAY() - 6, 
NULL 
)</formula>
    <inlineHelpText>Most recent week-ending date</inlineHelpText>
    <label>Last Week Ending Date</label>
    <type>Date</type>
</CustomField>