force-app/main/default/objects/pse__Proj__c/fields/Legacy_PS_Case__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy PS Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>