force-app/main/default/objects/pse__Proj__c/fields/Months_Since_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Deployment__c</fullName>
    <formula>(TODAY() - Go_Live_Date__c)/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Since Deployment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>