force-app/main/default/objects/pse__Proj__c/fields/Most_Recent_Project_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Project_Approved_Date__c</fullName>
    <label>Most Recent Project Approved Date</label>
    <type>Date</type>
</CustomField>