force-app/main/default/objects/pse__Proj__c/fields/Non_Standard_Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Contract_Terms__c</fullName>
    <description>This is a list of all non standard Payment Terms - Services</description>
    <label>Non Standard Contract Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holdback</fullName>
            </value>
            <value>
                <fullName>Milestone Retainers</fullName>
            </value>
            <value>
                <fullName>Regular Milestones</fullName>
            </value>
            <value>
                <fullName>Billing Hold until Project Completion</fullName>
            </value>
            <value>
                <fullName>PO Required</fullName>
            </value>
            <value>
                <fullName>Discounted Hourly Rate</fullName>
            </value>
            <value>
                <fullName>Retainer Credits</fullName>
                <isActive>false</isActive>
                <label>Retainer Credits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>