force-app/main/default/objects/pse__Proj__c/fields/Opportunity_Services_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Services_Discount__c</fullName>
    <formula>pse__Opportunity__r.Discount_Level_Services__c</formula>
    <label>Opportunity Services Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>