force-app/main/default/objects/pse__Proj__c/fields/Original_TFG_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Original_TFG_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original TFG Conversion</label>
    <type>Checkbox</type>
</CustomField>