force-app/main/default/objects/pse__Proj__c/fields/Overrun__c.field-meta.xml
<CustomField>
    <fullName>Overrun__c</fullName>
    <formula>(Total_Hours__c - pse__Planned_Hours__c)/pse__Planned_Hours__c</formula>
    <label>% Overrun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>