force-app/main/default/objects/pse__Proj__c/fields/Partner_Handover_Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Partner_Handover_Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Handover Document Received</label>
    <type>Checkbox</type>
</CustomField>