force-app/main/default/objects/pse__Proj__c/fields/Partner_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Partner_Project_Hours__c</fullName>
    <label>Partner Project Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>